# Asmadi-Engine

./: .clang-format  .gitignore  CMakeLists.txt  README.md
engine/: CMakeLists.txt
engine/include/core/: appstate.h
engine/include/ecs/: ecs.h
engine/include/geometry/: box.h  capsule.h  circle.h  cone.h  cylinder.h  dodecahedron.h  g_common.h  icosahedron.h  lathe.h  octahedron.h  plane.h  ring.h  sphere.h  tetrahedron.h  torus.h
engine/include/material/: basic_material.h  m_common.h  phong_material.h
engine/include/math/: matrix.h
engine/include/ui/: ui.h
engine/shaders/: phong_material.frag  post.vert  post_sobel.frag  ui.frag  ui.vert  ui_solid.frag  ui_text.frag  ui_text.vert  ui_textured.frag
engine/src/ecs/: ecs.c
engine/src/geometry/: box.c  capsule.c  circle.c  cone.c  cylinder.c  dodecahedron.c  g_common.c  icosahedron.c  lathe.c  octahedron.c  plane.c  ring.c  sphere.c  tetrahedron.c  torus.c
engine/src/material/: basic_material.c  m_common.c  phong_material.c
engine/src/math/: matrix.c
engine/src/ui/: ui.c
examples/: CMakeLists.txt
examples/box_geometry/: CMakeLists.txt  main.c
examples/demo/: CMakeLists.txt  main.c
examples/geometry_box/: main.c
examples/geometry_capsule/: CMakeLists.txt  main.c
examples/geometry_circle/: CMakeLists.txt  main.c
examples/geometry_cone/: CMakeLists.txt  main.c
examples/geometry_cylinder/: CMakeLists.txt  main.c
examples/geometry_dodecahedron/: CMakeLists.txt  main.c
examples/geometry_icosahedron/: CMakeLists.txt  main.c
examples/geometry_octahedron/: CMakeLists.txt  main.c
examples/geometry_plane/: CMakeLists.txt  main.c
examples/geometry_ring/: CMakeLists.txt  main.c
examples/geometry_sphere/: CMakeLists.txt  main.c
examples/geometry_tetrahedron/: CMakeLists.txt  main.c
examples/geometry_torus/: CMakeLists.txt  main.c
examples/post_sobel/: CMakeLists.txt  main.c
examples/rectangle/: main.c
examples/stress_test_ico/: CMakeLists.txt  main.c
src/: main.c  math.c  matrix.c  matrix.h  new.c
src/core/: appstate.h  main.c
src/ecs/: ecs.c  ecs.h
src/geometry/: box.c  box.h  capsule.c  capsule.h  circle.c  circle.h  common.c  common.h  cone.c  cone.h  cylinder.c  cylinder.h  dodecahedron.c  dodecahedron.h  g_common.c  g_common.h  icosahedron.c  icosahedron.h  lathe.c  lathe.h  line.c  line.h  octahedron.c  octahedron.h  plane.c  plane.h  ring.c  ring.h  sphere.c  sphere.h  tetrahedron.c  tetrahedron.h  torus.c  torus.h
src/material/: basic_material.c  basic_material.h  common.c  common.h  debug_material.c  debug_material.h  m_common.c  m_common.h
src/math/: matrix.c  matrix.h  spline.c  spline.h
src/shaders/: basic_material.frag  basic_material.vert  debug.frag  debug.vert  phong_material.frag  phong_material.vert  triangle.frag  triangle.vert
