# Placeholder to add example subdirs
# add_subdirectory(geometry_box)
# add_subdirectory(geometry_capsule)
# add_subdirectory(geometry_circle)
# add_subdirectory(geometry_cone)
# add_subdirectory(geometry_cylinder)
# add_subdirectory(geometry_dodecahedron)
# add_subdirectory(geometry_icosahedron)
# add_subdirectory(geometry_octahedron)
# add_subdirectory(geometry_plane)
# add_subdirectory(geometry_ring)
# add_subdirectory(geometry_sphere)
# add_subdirectory(geometry_torus)
# add_subdirectory(geometry_tetrahedron)
# add_subdirectory(stress_test_ico)
add_subdirectory(rectangle)
# Add more examples here, e.g., add_subdirectory(simple-box)